Caching works, but problem with loading all branches